<resources>
    <string name="app_name">MayaCARE</string>
    <string name="action_forgot_password">Forgot password?</string>
    <string name="label_account_yet">Don\'t have an account Yet?</string>
    <string name="label_login_as_volunteer">To Login as a Volunteer,</string>
    <string name="action_click_here"><u>Click Here</u></string>
    <string name="hint_email_or_mobile">Email id</string>
    <string name="hint_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_register_here">Register Here</string>
    <string name="title_services">Services</string>
    <string name="page_our_pledge">
        MayaCARE aims to fulfil the growing need for
        enhancing the comfort of senior citizens living in India.
        During our interactions with senior citizens,
        each of us at MayaCARE pledge to conduct our
        duties based on these three simple values:
        I don the identity of a MayaCARE associate with pride.
        With the faith that today
        Will be a turning point in my life
        The day I chose to assume responsibility for a future
        Of new learning, self-reliance and dignity
        On this date, I pledge to CARE with:</string>
    <string name="title_integrity">Integrity </string>
    <string name="integrity_paragraph">
        Be honest in every transaction.
        If something has been missed out,
        admit our mistake and rectify it at the earliest. </string>
    <string name="title_responsibility">Responsibility</string>
    <string name="responsibility_paragraph">
        Ensure that the task undertaken
        is completed in the time frame committed.
        If the task cannot be accomplished due to an unavoidable reason,
        inform the service recipient of the same.</string>
    <string name="title_patience">Patience</string>
    <string name="title_home">Home</string>
    <string name="title_about_us">About Us</string>
    <string name="title_our_founders">Our Founders &amp; Advisers</string>
    <string name="title_our_pledge">Our Pledge</string>
    <string name="title_library">Door Step Library</string>
    <string name="title_volunteers">Our Volunteers</string>
    <string name="title_media">Media</string>
    <string name="title_donors">Our Donors</string>
    <string name="title_faq">F.A.Q</string>
    <string name="title_enquiry_form">Enquiry Form</string>
    <string name="title_contact_us">Contact Us</string>
    <string name="title_logout">Logout</string>
    <string name="radio_yes">Yes</string>
    <string name="radio_no">No</string>
    <string name="lbl_personal_details">Welcome to MayaCare.
        \nPlease Enter the following\ndetails to help us serve you better.</string>
    <string name="hint_date_of_birth">Date Of Birth (dd/mm/yyyy)</string>
    <string name="hint_address">Residential Address</string>
    <string name="lbl_correspondence_details">Address Details</string>
    <string name="hint_city">City</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_country">Country</string>
    <string name="hint_pin_code">Pin Code</string>
    <string name="hint_telephone">Alternate Mobile Number</string>
    <string name="action_next">Next</string>
    <string name="action_previous">Previous</string>
    <string name="action_register">Register</string>
    <string name="lbl_app_set_credentials">Set credentials for app</string>
    <string name="hint_email_sign_up">Email Id</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="patience_paragraph">
        Treat each service recipient with respect and make a
        sincere effort to understand the expectation in each transaction.</string>
    <string name="progress_message_create_account">Creating account…</string>
    <string name="progress_message_updating_profile">Updating profile…</string>
    <string name="progress_message_sign_up">Completing registration…</string>
    <string name="progress_message_loading_profile">Loading profile…</string>
    <string name="permission_not_granted_msg">Permission required to work with photos, exiting app</string>
    <string name="about_us_first_paragraph">
        Founded in 2009, MayaCARE is supported through
        personal funds by working professionals – Abhay
        Joshi and his wife Manjiri (Gokhale) Joshi. MayaCARE
        services are available FREE of charge. However,
        appreciation in the form of voluntary donations
        from individuals/groups/companies is welcome.</string>
    <string name="about_us_second_paragraph">
        MayaCARE has a network of co-ordinators and
        volunteers running help lines in Mumbai and Pune.
        MayaCARE volunteers include college students,
        homemakers, working professionals and active senior
        citizens who visit senior citizens in their own homes
        to provide services. None of us can ever replace a family
        member. But as professionals struggle to meet the demands
        of an active work life, each of us at MayaCARE have pledged
        to make up for their absence with integrity,
        responsibility and patience.\n\nVisit website www.mayacare.com for more details.</string>
    <string name="val_msg_valid_email">Enter valid email</string>
    <string name="val_msg_empty_password">Enter password</string>
    <string name="progress_message_login">Authenticating…</string>
    <string name="progress_message_reset">Sending email…</string>
    <string name="message_email_sent">"Reset password email sent, please check your inbox"</string>
    <string name="dialog_title_forgot">Enter Email</string>
    <string name="dialog_content_forgot">An Email will be sent with reset password instructions</string>
    <string name="dialog_action_send">SEND</string>
    <string name="dialog_hint_forgot">abc@gmail.com</string>
    <string name="dialog_title_information">Information</string>
    <string name="dialog_action_yes">Yes</string>
    <string name="dialog_action_no">No</string>
    <string name="dialog_message_logout">Do you want to logout of MayaCARE App?</string>
    <string name="title_first_faqs">
        Does MayaCARE provide nurses/cooks?
        Can MayaCARE guarantee emergency medical care?</string>
    <string name="first_paragraph_faqs">
        MayaCARE does not provide emergency,
        ayah/nursing or domestic servant services.
        MayaCARE volunteers are educated working/retired professionals,
        homemakers or students who gladly perform all the activities a family
        member would. Thus, MayaCARE volunteers sit with patients in hospital/at home, read to them,
        give medicine/help with physiotherapy exercises under medical advice.
        For a comprehensive list of services, click  here .
        Please note that these  terms and conditions
        are part of our attempt to ensure your safety
        during your association with MayaCARE.</string>
    <string name="title_second_faqs">
        Does MayaCARE provide services to
        disabled persons who are not senior citizens?</string>
    <string name="second_paragraph_faqs">
    Yes, disabled persons could also avail of our services.</string>
    <string name="title_third_faqs">
        What do I pay MayaCARE?</string>
    <string name="third_paragraph_faqs">
        MayaCARE services are available FREE of charge. However,
        if you wish to make a voluntary donation to support the cause of MayaCARE,
        payment is accepted via bank transfer or account/payee
        cheques in the name of ‘MayaCARE Foundation’ only.</string>
    <string name="title_four_faqs">
           How can I trust the service professional visiting my home?</string>
    <string name="four_paragraph_faqs">
        It is mandatory for MayaCARE volunteers to carry a photo ID card bearing
        their name and the MayaCARE logo. In case a volunteer is not carrying his/her
        I-card, kindly call our helpline. In the event that this was to occur,
        we apologize for the inconvenience caused to you. Please note that these
        terms and conditions  are part of our attempt to ensure your safety during
        your association with MayaCARE. MayaCARE volunteers are expected to conduct
        interactions within the guest reception area/main door of the recipients’
        registered address. Recipients are requested to refrain from requesting volunteers
        to enter any other area of their homes or assist in any other tasks outside the purview
        of MayaCARE services.</string>
    <string name="label_india">India</string>
    <string name="label_regester">Registered Office:</string>
    <string name="pune_address_first_line">1214 Shukravar Peth, Subhash Nagar, Lane no 4, Pune 411002.</string>
    <string name="label_call">Call us at :</string>
    <string name="label_mumbai_contact">Mumbai</string>
    <string name="label_contact_first">9594073475/9594063475</string>
    <string name="label_pune_contact">Pune</string>
    <string name="label_contact_pune_first">9552510411/9552510400</string>
    <string name="label_uk">United Kingdom</string>
    <string name="uk_adrs_first_line">11 Merthen Grove, Tattenhoe, Milton Keynes, Buckinghamshire, MK 43AX.</string>
    <string name="label_emailus">Email Us At :</string>
    <string name="label_email_id"><u>service@mayacare.com</u></string>
    <string name="label_door_step_lib">
        MayaCARE offers door-step library services for senior citizens
        of Pune and Mumbai. The door-step library subscription is available
        at a monthly service charge of Rs 400/- along with a returnable deposit
        and fees of individual libraries suggested by individual senior citizens.
        MayaCARE is not affiliated to any specific libraries.</string>
    <string name="label_our_donor">
        Our Donor makes it possible for us to Function.
        We are really thankful to them for their support.</string>
    <string name="label_forbes_marshall">Forbes Marshall Foundation</string>
    <string name="label_felix">Felix TechLabs LLP, Pune</string>
    <string name="label_Donate_us">To Donate to Us,</string>
    <string name="action_click"><u>Click Here</u></string>
    <string name="label_donate">
        If you want to make a Donation, you can
        transfer the money to our Bank Account.</string>
    <string name="label_bank_name">Bank Name  : </string>
    <string name="label_account_no">A/C Number : </string>
    <string name="label_account_address">A/C Address : </string>
    <string name="label_ifsc_code">IFSC Code  : </string>
    <string name="name_bank_name">Axis Bank </string>
    <string name="number_account_no">10055228899</string>
    <string name="address_account_address">Pimpri, Pune</string>
    <string name="code_ifsc_code">IAXIS00234</string>
    <string name="label_query">If you have any queries, write to us at</string>
    <string name="action_email">  <u>service@mayacare.com</u></string>
    <string name="hint_enquiry_first_name">First Name</string>
    <string name="hint_enquiry_last_name">Last Name</string>
    <string name="hint_enquiry_city">City</string>
    <string name="hint_enquiry_country">Country</string>
    <string name="hint_enquiry_email">Email-Address</string>
    <string name="hint_enquiry_phone_no">Phone Number</string>
    <string name="hint_enquiry_nature_query">Nature Of Query</string>
    <string name="action_enquiry_submit">Submit</string>
    <string name="label_our_founders">Our Founders :</string>
    <string name="label_honorary_advisers">Board of Honorary Advisers :</string>
    <string name="label_volunteering">To know more about Volunteering"</string>
    <string name="dialog_title_services">Select Services</string>
    <string name="label_volunteer_title">VOLUNTEER</string>
    <string name="label_volunteer_reg">Want to be Volunteer?</string>
</resources>