<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">


    <ImageView
        android:id="@+id/imv_mc_icon"
        style="@style/MCicon" />

    <TextView
        android:id="@+id/txt_lbl_volunteer"
        android:layout_centerHorizontal="true"
        android:text="@string/label_volunteer_title"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:layout_below="@id/imv_mc_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edt_volunteer_email"
        style="@style/MCEditText.LoginEditText"
        android:layout_below="@+id/txt_lbl_volunteer"
        android:drawableLeft="@drawable/ic_user_email"
        android:drawablePadding="8dp"
        android:hint="@string/hint_email_or_mobile" />

    <EditText
        android:id="@+id/edt_volunteer_password"
        style="@style/MCEditText.LoginEditText"
        android:layout_below="@+id/edt_volunteer_email"
        android:drawableLeft="@drawable/ic_user_password"
        android:drawablePadding="8dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/txt_volunteer_forgot_password"
        style="@style/MCTextView.LoginTextView"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edt_volunteer_password"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/action_forgot_password"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_volunteer_login"
        style="@style/MCButton.LongButton.LoginButton"
        android:layout_below="@+id/txt_volunteer_forgot_password"
        android:text="@string/action_login" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/btn_volunteer_login"
        android:layout_marginTop="20sp"
        android:background="@color/colorWhite"/>

    <TextView
        android:id="@+id/txt_lbl_register_here"
        style="@style/MCTextView.LoginTextView"
        android:layout_below="@+id/btn_volunteer_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/label_volunteer_reg"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_volunteer_registration"
        android:layout_marginTop="20dp"
        style="@style/MCButton.LongButton.LoginButton"
        android:layout_below="@+id/txt_lbl_register_here"
        android:text="@string/action_register_here" />

</RelativeLayout>