<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        layout="@layout/layout_toolbar"/>
    <TextView
        android:id="@+id/txt_our_pledge"
        android:text="@string/page_our_pledge"
        android:textSize="16sp"
        android:layout_below="@id/toolbar"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/lbl_integrity"
        android:layout_marginLeft="16dp"
        android:textStyle="bold"
        android:layout_marginTop="8sp"
        android:text="@string/title_integrity"
        android:layout_below="@+id/txt_our_pledge"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_integrity_paragraph"
        android:layout_below="@+id/lbl_integrity"
        android:text="@string/integrity_paragraph"
        android:textSize="16sp"
        android:layout_marginLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lbl_responsibility"
        android:layout_marginLeft="16dp"
        android:textStyle="bold"
        android:layout_marginTop="8sp"
        android:text="@string/title_responsibility"
        android:layout_below="@+id/txt_integrity_paragraph"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_responsibility_paragraph"
        android:layout_below="@+id/lbl_responsibility"
        android:text="@string/responsibility_paragraph"
        android:textSize="16sp"
        android:layout_marginLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/lbl_patience"
        android:layout_marginLeft="16dp"
        android:textStyle="bold"
        android:text="@string/title_patience"
        android:layout_below="@+id/txt_responsibility_paragraph"
        android:layout_marginTop="8sp"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/txt_patience_paragraph"
        android:layout_below="@+id/lbl_patience"
        android:text="@string/patience_paragraph"
        android:textSize="16sp"
        android:layout_marginLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>


</ScrollView>