<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_toolbar" />


    <TextView
        android:id="@+id/txt_our_donor"
        android:layout_below="@+id/toolbar"
        android:text="@string/label_our_donor"
        style="@style/MCTextView.OurDonorsTextView" />

    <TextView
        android:id="@+id/txt_forbes_marshall"
        android:layout_below="@+id/txt_our_donor"
        style="@style/MCTextView.OurDonorsTextView"
        android:textColor="@color/colorAccent"
        android:text="@string/label_forbes_marshall" />

    <ImageView
        android:id="@+id/img_foebes_marshall"
        android:layout_below="@+id/txt_forbes_marshall"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:src="@drawable/forbes_logo"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_felix_tech_labs"
        android:layout_below="@+id/img_foebes_marshall"
        style="@style/MCTextView.OurDonorsTextView"
        android:textColor="@color/colorAccent"
        android:text="@string/label_felix" />

    <ImageView
        android:id="@+id/img_felix"
        android:layout_below="@+id/txt_felix_tech_labs"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:src="@drawable/felix_logo"
        android:layout_width="200dp"
        android:layout_centerHorizontal="true"
        android:layout_height="150dp" />

    <TextView
        android:id="@+id/txt_lbl_donate_us"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"
        android:text="@string/label_Donate_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/txt_click_here"
        android:layout_toRightOf="@+id/txt_lbl_donate_us"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"
       android:textColor="@color/colorAccent"
        android:text="@string/action_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



</RelativeLayout>