<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/p_16">

        <TextView
            android:id="@+id/txt_lbl_set_credentials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_app_set_credentials"
            android:textColor="@color/colorPrimaryDark"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/il_email"
            style="@style/SignUpTextInputLayout"
            android:layout_below="@+id/txt_lbl_set_credentials">

            <EditText
                android:id="@+id/edt_email"
                style="@style/MCEditText.SignUpScreen"
                android:hint="@string/hint_email_sign_up"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/il_password"
            style="@style/SignUpTextInputLayout"
            android:layout_below="@+id/il_email">

            <EditText
                android:id="@+id/edt_password"
                style="@style/MCEditText.SignUpScreen"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/il_confirm_password"
            style="@style/SignUpTextInputLayout"
            android:layout_below="@+id/il_password">

            <EditText
                android:id="@+id/edt_confirm_password"
                style="@style/MCEditText.SignUpScreen"
                android:layout_height="wrap_content"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_register"
            style="@style/MCButton.LongButton"
            android:layout_below="@+id/il_confirm_password"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/action_register"/>

    </RelativeLayout>
</ScrollView>